# caption-compass

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
caption_compass/: __init__.py  __main__.py  captions.py  cli.py  evaluator.py  provider_config.py  repair.py  scaffold.py  scene_core.py  video_ingestion.py  vision_observations.py
docs/: GATE_VISUAL_MAPS.md  README_GATE_POLICY.md
docs/artifacts/: c0-scope-boundary.md  c1-scaffold-proof.md  c2-city-frame-evidence.sample.json  c2-cooking-frame-evidence-8.sample.json  c2-cooking-frame-evidence.sample.json  c2-frame-evidence.sample.json  c3-scene-core.sample.json  c4-four-tone-captions.sample.json  c5-evaluation.sample.json  c6-repair-trace.sample.json  c6a-provider-config.sample.json  c6b-persisted-frames.sample.json  c6c-frame-observations.sample.json
docs/execution/: 00-caption-compass-overview.execution.md  01-public-safe-product-boundary.execution.md  02-video-frame-ingestion.execution.md  03-factual-scene-core.execution.md  04-four-tone-caption-generation.execution.md  05-accuracy-tone-evaluator.execution.md  06-retry-repair-loop.execution.md  07-ui-demo-path.execution.md  08-docker-readme-submission.execution.md
docs/implementation-prompts/: bug-fix-template.prompt.md  first-implementation-chat.prompt.md  gate-c0.prompt.md  gate-c1.prompt.md  gate-c2.prompt.md  gate-c3.prompt.md  gate-c4.prompt.md  gate-c5.prompt.md  gate-c6.prompt.md  gate-c7.prompt.md  gate-c8.prompt.md
docs/implementation-roadmaps/: 00-overview.roadmap.md  01-public-safe-boundary.roadmap.md  02-video-frame-ingestion.roadmap.md  03-factual-scene-core.roadmap.md  05-evaluator.roadmap.md  (+4 more)
tests/: test_captions.py  test_evaluator.py  test_provider_config.py  test_repair.py  test_scaffold.py  test_scene_core.py  test_video_ingestion.py  test_vision_observations.py
(+9 files in other folders)
